# colonnie_de_fourmis

./: CMakeLists.txt  README.md  main.cpp
Ants/: CAnt.hpp
Ants/Queen/: CQueen.cpp  CQueen.hpp
Ants/Soldier/: CSoldier.hpp
Ants/Worker/: CWorker.cpp  CWorker.hpp
resources/foods/: CFood.cpp  CFood.hpp
system/display/: CDisplay.cpp  CDisplay.hpp  Cdisplay.hpp
system/system/: CSystem.cpp  CSystem.hpp
